# KBrain

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  docs.txt
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  PROJECT_STRUCTURE.md  STORAGE_INTERFACE.md  TECH_STACK.md
kbrain-nginx/: Dockerfile  nginx.conf
kbrain_backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_storage.py
kbrain_backend/libs/kbrain-processor-orchestrator/: README.md  pyproject.toml
kbrain_backend/libs/kbrain-processor-orchestrator/src/kbrain_processor_orchestrator/: __init__.py  base.py  models.py  orchestrator.py  publisher.py  ragflow_client.py  worker.py
kbrain_backend/libs/kbrain-processor-orchestrator/src/kbrain_processor_orchestrator/processors/: __init__.py  document_processor.py  image_processor.py  text_processor.py  xlsx_medication_processor.py
kbrain_backend/libs/kbrain-storage/: pyproject.toml
kbrain_backend/libs/kbrain-storage/src/kbrain_storage/: README.md  __init__.py  aws_s3.py  azure_blob.py  base.py  local.py
kbrain_backend/services/kbrain-backend/: .env.example  MIGRATIONS.md  pyproject.toml  start_service.sh
kbrain_backend/services/kbrain-backend/alembic/: env.py
kbrain_backend/services/kbrain-backend/alembic/versions/: 2cd7dc1e286b_remove_is_active_column_from_scopes_.py  add_processing_result_column.py  add_tags_feature.py  d9c4d8ddc760_initial_migration_with_scopes_documents_.py  rename_tag_metadata_to_meta.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/: main.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/api/: schemas.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/api/routes/: documents.py  health.py  processing.py  scopes.py  statistics.py  tags.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/config/: settings.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/core/models/: document.py  processing_queue.py  scope.py  tag.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/database/: connection.py
kbrain_backend/services/kbrain-backend/src/kbrain_backend/utils/: errors.py  logger.py
kbrain_backend/src/: __init__.py
kbrain_backend/src/api/: schemas.py
kbrain_backend/src/api/routes/: documents.py  health.py  scopes.py  statistics.py
kbrain_backend/src/core/models/: document.py  processing_queue.py  scope.py
kbrain_backend/src/database/: connection.py
kbrain_backend/src/utils/: errors.py  logger.py
kbrain_backend/storage/: README.md  __init__.py  aws_s3.py  azure_blob.py  base.py  file.py  local.py  memory.py
kbrain_frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
kbrain_frontend/src/: App.jsx  App.tsx
kbrain_frontend/src/api/: client.ts  documents.ts  index.ts  scopes.ts  statistics.ts  tags.ts  types.ts
kbrain_frontend/src/hooks/: index.ts  useDocuments.ts  useScopes.ts  useStatistics.ts  useTags.ts
kbrain_frontend/src/utils/: format.ts
