[project]
name = "kbrain-backend"
version = "0.1.0"
description = "KBrain Backend API - Knowledge Management System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "aiofiles>=24.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "loguru>=0.7.0",
    "greenlet>=3.2.4",
]

[tool.uv.workspace]
members = [
    "libs/kbrain-storage",
    "services/kbrain_backend",
]
