[project]
name = "kbrain-backend"
version = "0.1.0"
description = "KBrain Backend API - Knowledge Management System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "aiofiles>=24.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
    "loguru>=0.7.0",
    "greenlet>=3.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0",
    "poethepoet>=0.31.0",
]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."
format-check = "ruff format --check ."
typecheck = "mypy --strict ."

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
exclude = [
    "test_.*\\.py$",
]

[[tool.mypy.overrides]]
module = "kbrain_backend.core.models.*"
disable_error_code = ["misc", "type-arg"]

[[tool.mypy.overrides]]
module = "kbrain_backend.api.routes.*"
disable_error_code = ["no-untyped-def"]

[tool.uv.workspace]
members = [
    "libs/kbrain-storage",
    "services/kbrain_backend",
]
