[project]
name = "kbrain-processor-orchestrator"
version = "0.1.0"
description = "Document processing orchestrator with async worker and pluggable processors"
readme = "README.md"
authors = [
    { name = "Marcin Wątroba", email = "marcin.watroba@deviniti.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "aio-pika>=9.0.0",
    "docling>=2.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
