[project]
name = "kbrain-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcin Wątroba", email = "marcin.watroba@deviniti.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
